--- a/resume.tex
+++ b/resume.tex
@@ -8,98 +8,99 @@
 \begin{document}
 
 %% basic personal info
-\name{Chi Zhang}
+\name{ChengXiang Qi}
 \begin{basicinfo}
-  \info{\email{iskyzh@gmail.com}}
-  \info{\homepage{skyzh.dev}[https://skyzh.dev]}
-  \info{\github{skyzh}[https://github.com/skyzh]}
-  \info{\linkedinsquare{alex-chi-skyzh}[https://www.linkedin.com/in/alex-chi-skyzh/?originalSubdomain=cn]}
+  \info{\email{18630816527@163.com}}
+  \info{\homepage{kuangjux.top}[https://kuangjux.top]}
+  \info{\github{KuangjuX (\textbf{157} followers)}[https://github.com/KuangjuX]}
+  \info{\linkedinsquare{KuangjuX}[https://www.linkedin.com/in/kuangjux/]}
   % \phone{}
 \end{basicinfo}
 
 \section{Education}
-\cventry{Carnegie Mellon University}
-  {August 2022(Expected) -- December 2023 (Expected)}
-  [Master of Science in Computer Science]
-  [Pittsburgh, PA]
-\cventry{Shanghai Jiao Tong University}
-  {September 2018 -- June 2022}
-  [B.Eng in Computer Science and Technology]
-  [Shanghai, China]
+\cventry{TianJin University}
+  {September 2019 -- June 2023(Expected)}
+  [Computer Science and Technology]
+  [TianJin, China]
+
+
+
+\section{Projects}
+
+\cventry{xv6-rust}
+  {03/2021 - 08/2021}
+  [MIT xv6-riscv implemented by Rust]
+  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}73)]{https://github.com/Ko-oK-OS/xv6-rust}]
   \begin{itemize}
-    \item GPA 93.58/100, Rank 1/149, National Scholarship 2019 (Top 0.2\% national-wide)
-    \item A+ Courses: Operating Systems, Computer Architecture, Computer Networks, and 28 others
+    \item A Unix-like operating system implemented pure rust. 
+    \item Optimize memory module using Buddy Sytem.
+    \item Redesign Spinlock/Sleeplock as smart pointer.
+    \item Optimize file system, making it support Rust features.
   \end{itemize}
 
-\section{Internship Experience}
+  \cventry{rCore-fat}
+  {07/2021 - 08/2021}
+  [MIT A operaing system based rCore-tutorial-v3 with fat32 file system]
+  [\iconlink[\faGithub][rCore-fat]{https://github.com/KuangjuX/rCore-fat}]
+  \begin{itemize}
+    \item Design fat32 file system for rCore-Tutorial-v3, it is a alternative topic of rCore OS community in summer 2021.
+  \end{itemize}
 
-\cventry{Singularity Data, Inc.}
-  {August 2021 – July 2022}
-  [Database System R\&D Intern]
-  [Shanghai, China]
+  \cventry{Trivial-TCP}
+  {08/2021 - 09/2021}
+  [A TCP/IP stack implemented in pure C]
+  [\iconlink[\faGithub][Trivial-TCP]{https://github.com/KuangjuX/Trivial-TCP}]
+  \begin{itemize}
+    \item A TCP/IP stack which use UDP to simulate low level network environment. This project is the final project of Computer Netword Coursera.
+  \end{itemize}
 
+  \cventry{mini-game-os}
+  {07/2022 - Now}
+  [A bare metal game running in raspberry pi 4 written in Rust]
+  [\iconlink[\faGithub][raspberrypi-embedded/mini-game-os]{https://github.com/raspberrypi-embedded/mini-game-os}]
+  \begin{itemize}
+    \item This is my hobby project and also my first try to explore embedded system in Rust 
+    \item It is designed for playing simple games such as snake game, flappy bird and son 
+    \item It can run QEMU and raspberry pi 4B.
+  \end{itemize}
+
+\section{Selected Awards}
 \begin{itemize}
-  \item One of the top contributors of \iconlink[\faGithub][RisingWave]{https://github.com/singularity-data/risingwave} — a next-generation streaming database in the cloud. \\ Worked on the development of almost all components related to stream computing and state store.
-  \item Designed and implemented \textbf{shared state} to support \textbf{streaming index} in RisingWave; implemented \textbf{lookup join executor} based on shared state to support efficient \textbf{index delta joins}.
-  \item Lead the team to investigate and analyze \textbf{performance issues} in RisingWave with benchmarks; fixed bugs and proposed strategies which improved the system throughput by 10x in a 3-month period.
-  \item Greatly improved RisingWave’s development experience by initiating the \textbf{developer ecosyste}m, \\including \textbf{streaming system dashboard}, \textbf{developers’ tool} \textit{RiseDev}, and a \textbf{benchmark set-up tool} based on Terraform. They are now indispensable parts of everyone’s development process.
+  \item NSCSCC Team Competition Third Prize in 2022
+  \item OSCOMP Team Competition Thrid Prize in 2021
+  \item The Best Quality Award in Summer 2021
 \end{itemize}
 
-\cventry{ByteDance, Ltd.}
-  {June 2021 – August 2021}
-  [Storage System R\&D Intern, TerarkDB Team]
-  [Beijing, China]
-
+\section{Selected Experiences}
+\cventry{Teaching Assignment}
+{09/2021 - 11/2021}
 \begin{itemize}
-  \item Implemented \textbf{Zone-Aware Garbage Collection} in \textbf{TerrakDB} for Zoned Namespace SSDs, which\\ reduced 3-4x of space amplification caused by interleaving write lifetime in a single ZNS zone.\iconlink[\faGithub]{https://github.com/bytedance/terarkdb}
-  \item Added observability facilities to \textbf{ZenFS} (by Western Digital) to analyze bottlenecks and implemented a \textbf{WAL-Aware Zone Allocator}, which reduced the p999 tail latency by 100x.\iconlink[\faGithub]{https://github.com/bzbd/zenfs}
+  \item Pratice of ICS in 2021, I help students complete NEMU(a x86-32 software emulator).
 \end{itemize}
 
-\cventry{PingCAP, Inc.}
-  {August 2020 -- January 2021}
-  [Sotrage System R\&D Intern, TiKV Storage Team][Shanghai, China]
-  \begin{itemize}
-    \item Built LSM-based storage engine \textbf{AgateDB} from ground-up. Inspired by WiscKey and BadgerDB, \\AgateDB separates large vallues from LSM tree into value log, so as to reduce write amplification.\iconlink[\faGithub]{https://github.com/tikv/agatedb}
-  \end{itemize}
-
-\section{Open-Source Contributions}
-
-\cventry{cmu-db/bustub}
-  {Fall 2022}
-  [Teaching Assistant for 15-445/645 Database Systems]
-  [\iconlink[\faGithub][cmudb/bustub]{https://github.com/cmu-db/bustub}]
-  \begin{itemize}
-    \item Design and implement \textbf{query processing (SQL) layer} (binder, planner, optimizer) for the bustub\\ project and design course projects.
-  \end{itemize}
-
-\cventry{RisingLight Community}
-  {January 2022 -- Now}
-  [RisingLight Project Maintainer]
-  [\iconlink[\faGithub][risinglightdb]{https://github.com/risinglightdb}]
-  \begin{itemize}
-    \item Leads the development of \textbf{RisingLight}, an OLAP database system for educational purpose. RisingLight is written in Rust, supports simple TPC-H queries, and has a merge-tree based columnar storage.
-  \end{itemize}
-
-  \cventry{TiKV Community}
-    {May 2020 -- Now}
-    [TiKV Maintainer]
-    [\iconlink[\faGithub][tikv]{https://github.com/tikv}] % TODO: github link
-    \begin{itemize}
-      \item Maintains \textbf{TiKV Coprocessor}, the push-down execution framework of TiDB. Mentored community\\ members to contribute features (e.g. new data types, plugin system) in the \textbf{LFX Mentorship}. \iconlink{https://github.com/tikv/tikv/issues/9066}\ \iconlink{https://github.com/tikv/tikv/issues/9747}
-    \end{itemize}
-
-\cventry{Personal Projects}{\textbf{4k} followers \iconlink[\faGithub][skyzh]{https://github.com/skyzh}}
+\cventry{TWT Studio}
+{09/2019 - 01/2021}
 \begin{itemize}
-  \item \textbf{type-exercise-in-rust} (\faIcon[regular]{star}870):
-  {\small Learn Rust black magics (GAT, HRTB, bypassing compiler bugs, macros) by implementing an expression framework in database systems.\iconlink[\faGithub]{https://github.com/skyzh/type-exercise-in-rust}}
+  \item Maintain Part Management System 
+  \item Develop Intramural Forum System in WeiPeiYang
+  \item Develop AT(a office automation system)
 \end{itemize}
+
 
 
 \section{Skills}
 
 \begin{compactlist}
-  \item \textbf{Programming Languages}: Rust, C++, Golang, Python and Node.js
-  \item \textbf{Tech Skills}: Key-Value Storage Systems, SSD-optimized File Systems, Database Systems, Stream-Processing Systems
+  \item \textbf{Programming Languages}: Rust, C/C++, Go, Python, HTML?CSS/JavaScript. PHP
+  \item \textbf{Frameworks}: Vue3, Gin, Laravel
+  \item \textbf{Tools}: VSCode, gdb, GNU make, CMake, QEMU
 \end{compactlist}
+
+\section{Others}
+\begin{itemize}
+  \item Self taught CMU 15-445, MIT 6.S081 and other public courses and finish lab assignments 
+  \item Interested OS, Distributed System, Embedded System 
+  \item Persoanl open source projects have earned more than 200 stars.
+\end{itemize}
 
 \end{document}
