--- a/resume.tex
+++ b/resume.tex
@@ -25,7 +25,7 @@
 
 
 
-\section{Projects}
+\section{Selected Projects}
 
 \cventry{xv6-rust}
   {03/2021 - 08/2021}
@@ -40,7 +40,7 @@
 
   \cventry{rCore-fat}
   {07/2021 - 08/2021}
-  [MIT A operaing system based rCore-tutorial-v3 with fat32 file system]
+  [A operaing system based rCore-tutorial-v3 with fat32 file system]
   [\iconlink[\faGithub][rCore-fat]{https://github.com/KuangjuX/rCore-fat}]
   \begin{itemize}
     \item Design fat32 file system for rCore-Tutorial-v3, it is a alternative topic of rCore OS community in summer 2021.
@@ -71,7 +71,7 @@
   \item The Best Quality Award in Summer 2021
 \end{itemize}
 
-\section{Selected Experiences}
+\section{Experiences}
 \cventry{Teaching Assignment}
 {09/2021 - 11/2021}
 \begin{itemize}
