--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 \begin{basicinfo}
   \info{\email{18630816527@163.com}}
   \info{\homepage{kuangjux.top}[https://kuangjux.top]}
-  \info{\github{KuangjuX (\textbf{157} followers)}[https://github.com/KuangjuX]}
+  \info{\github{KuangjuX (\textbf{159} followers)}[https://github.com/KuangjuX]}
   \info{\linkedinsquare{KuangjuX}[https://www.linkedin.com/in/kuangjux/]}
   % \phone{}
 \end{basicinfo}
@@ -30,7 +30,7 @@
 \cventry{xv6-rust}
   {03/2021 - 08/2021}
   [MIT xv6-riscv implemented by Rust]
-  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}73)]{https://github.com/Ko-oK-OS/xv6-rust}]
+  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}74)]{https://github.com/Ko-oK-OS/xv6-rust}]
   \begin{itemize}
     \item A Unix-like operating system implemented pure rust. 
     \item Optimize memory module using Buddy Sytem.
@@ -43,7 +43,7 @@
   [A operaing system based rCore-tutorial-v3 with fat32 file system]
   [\iconlink[\faGithub][rCore-fat]{https://github.com/KuangjuX/rCore-fat}]
   \begin{itemize}
-    \item Design fat32 file system for rCore-Tutorial-v3, it is a alternative topic of rCore OS community in summer 2021.
+    \item Design fat32 file system for rCore-Tutorial-v3, it is a alternative topic of rCore OS community in Summer OSPP 2021.
   \end{itemize}
 
   \cventry{Trivial-TCP}
@@ -68,10 +68,16 @@
 \begin{itemize}
   \item NSCSCC Team Competition Third Prize in 2022
   \item OSCOMP Team Competition Thrid Prize in 2021
-  \item The Best Quality Award in Summer 2021
+  \item The Best Quality Award in Summer OSPP 2021
 \end{itemize}
 
 \section{Experiences}
+\cventry{Summer OSPP 2021}
+{07/2021 - 10/2021}
+\begin{itemize}
+  \item I join rcore-os commuinity and design fat32 file system for rCore-Tutorial-v3.
+\end{itemize}
+
 \cventry{Teaching Assignment}
 {09/2021 - 11/2021}
 \begin{itemize}
@@ -91,7 +97,7 @@
 \section{Skills}
 
 \begin{compactlist}
-  \item \textbf{Programming Languages}: Rust, C/C++, Go, Python, HTML?CSS/JavaScript. PHP
+  \item \textbf{Programming Languages}: Rust, C/C++, Go, Python, HTML/CSS/JavaScript. PHP
   \item \textbf{Frameworks}: Vue3, Gin, Laravel
   \item \textbf{Tools}: VSCode, gdb, GNU make, CMake, QEMU
 \end{compactlist}
