--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 \begin{basicinfo}
   \info{\email{18630816527@163.com}}
   \info{\homepage{kuangjux.top}[https://kuangjux.top]}
-  \info{\github{KuangjuX (\textbf{159} followers)}[https://github.com/KuangjuX]}
+  \info{\github{KuangjuX (\textbf{164} followers)}[https://github.com/KuangjuX]}
   \info{\linkedinsquare{KuangjuX}[https://www.linkedin.com/in/kuangjux/]}
   % \phone{}
 \end{basicinfo}
@@ -30,7 +30,7 @@
 \cventry{xv6-rust}
   {03/2021 - 08/2021}
   [MIT xv6-riscv implemented by Rust]
-  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}74)]{https://github.com/Ko-oK-OS/xv6-rust}]
+  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}80)]{https://github.com/Ko-oK-OS/xv6-rust}]
   \begin{itemize}
     \item A Unix-like operating system implemented pure rust. 
     \item Optimize memory module using Buddy Sytem.
@@ -52,6 +52,8 @@
   [\iconlink[\faGithub][Trivial-TCP]{https://github.com/KuangjuX/Trivial-TCP}]
   \begin{itemize}
     \item A TCP/IP stack which use UDP to simulate low level network environment. This project is the final project of Computer Netword Coursera.
+    \item Implement three-way handshake, Go-Back-N, sliding window and so on.
+    \item Implement a Linux-like timer.
   \end{itemize}
 
   \cventry{mini-game-os}
@@ -63,6 +65,16 @@
     \item It is designed for playing simple games such as snake game, flappy bird and son 
     \item It can run QEMU and raspberry pi 4B.
   \end{itemize}
+
+\cventry{Other Projects}{}[][]
+\begin{itemize}
+  \item \textbf{xv6-riscv-solution}(\faIcon[regular]{star}20):
+  {\small My solution and notes for MIT 6.S081 OS Course labs.} [\iconlink[\faGithub][xv6-riscv-solution]{https://github.com/KuangjuX/xv6-riscv-solution}]
+  \item \textbf{NEMU-x86}(\faIcon[regular]{star}10):
+  {\small NEMU is a simple but complete full-system emulator designed for teaching purpose. I finished it during Computer Organization and System Course.}  [\iconlink[\faGithub][NEMU-x86]{https://github.com/KuangjuX/NEMU-x86}]
+  \item \textbf{SimpleMIPS}(\faIcon[regular]{star}5):
+  {\small SimpleMIPS is a classical five-stage pipelined CPU written in verilog that supports 57 MIPS instructions. } [\iconlink[\faGithub][SimpleMIPS]{https://github.com/KuangjuX/SimpleMIPS}]
+\end{itemize}
 
 \section{Selected Awards}
 \begin{itemize}
@@ -99,7 +111,8 @@
 \begin{compactlist}
   \item \textbf{Programming Languages}: Rust, C/C++, Go, Python, HTML/CSS/JavaScript. PHP
   \item \textbf{Frameworks}: Vue3, Gin, Laravel
-  \item \textbf{Tools}: VSCode, gdb, GNU make, CMake, QEMU
+  \item \textbf{Tools}: VSCode, gdb, GNU make, CMake, QEMU, Docker
+  \item \textbf{Tech Skills}: OS Kernel, Low level, Backend and Frontend
 \end{compactlist}
 
 \section{Others}
