fix typo & update resume

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 \begin{basicinfo}
   \info{\email{18630816527@163.com}}
   \info{\homepage{kuangjux.top}[https://kuangjux.top]}
-  \info{\github{KuangjuX (\textbf{164} followers)}[https://github.com/KuangjuX]}
+  \info{\github{KuangjuX (\textbf{173} followers)}[https://github.com/KuangjuX]}
   \info{\linkedinsquare{KuangjuX}[https://www.linkedin.com/in/kuangjux/]}
   % \phone{}
 \end{basicinfo}
@@ -30,7 +30,7 @@
 \cventry{xv6-rust}
   {03/2021 - 08/2021}
   [MIT xv6-riscv implemented by Rust]
-  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}80)]{https://github.com/Ko-oK-OS/xv6-rust}]
+  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}84)]{https://github.com/Ko-oK-OS/xv6-rust}]
   \begin{itemize}
     \item A Unix-like operating system implemented pure rust. 
     \item Optimize memory module using Buddy Sytem.
@@ -66,15 +66,20 @@
     \item It can run QEMU and raspberry pi 4B.
   \end{itemize}
 
-\cventry{Other Projects}{}[][]
-\begin{itemize}
-  \item \textbf{xv6-riscv-solution}(\faIcon[regular]{star}20):
-  {\small My solution and notes for MIT 6.S081 OS Course labs.} [\iconlink[\faGithub][xv6-riscv-solution]{https://github.com/KuangjuX/xv6-riscv-solution}]
-  \item \textbf{NEMU-x86}(\faIcon[regular]{star}10):
-  {\small NEMU is a simple but complete full-system emulator designed for teaching purpose. I finished it during Computer Organization and System Course.}  [\iconlink[\faGithub][NEMU-x86]{https://github.com/KuangjuX/NEMU-x86}]
-  \item \textbf{SimpleMIPS}(\faIcon[regular]{star}5):
-  {\small SimpleMIPS is a classical five-stage pipelined CPU written in verilog that supports 57 MIPS instructions. } [\iconlink[\faGithub][SimpleMIPS]{https://github.com/KuangjuX/SimpleMIPS}]
-\end{itemize}
+  \cventry{Other Projects}{}
+  \begin{itemize}
+    \item \textbf{xv6-riscv-solution}(\faIcon[regular]{star}21):
+    {\small My solution and notes for MIT 6.S081 OS Course labs.} [\iconlink[\faGithub][xv6-riscv-solution]{https://github.com/KuangjuX/xv6-riscv-solution}]
+    \item \textbf{NEMU-x86}(\faIcon[regular]{star}10):
+    {\small NEMU is a simple but complete full-system emulator designed for teaching purpose. I finished it during Computer Organization and System Course.}  [\iconlink[\faGithub][NEMU-x86]{https://github.com/KuangjuX/NEMU-x86}]
+    \item \textbf{NSCSCC-2022-TJU/ChiselMIPS}:
+    {\small ChiselMIPS is a five-stage CPU with instruction cache, data cache and TLB written in Chisel for NSCSCC 2022.} [\iconlink[\faGithub][NSCSCC-2022-TJU/ChiselMIPS]{https://github.com/NSCSCC-2022-TJU/ChiselMIPS}]
+    \item \textbf{SimpleMIPS}(\faIcon[regular]{star}5):
+    {\small SimpleMIPS is a classical five-stage pipelined CPU written in verilog that supports 57 MIPS instructions. } [\iconlink[\faGithub][SimpleMIPS]{https://github.com/KuangjuX/SimpleMIPS}]
+    \item \textbf{SimpleDB}:
+    {\small My solution for CMU 15445/645 lab. } [\iconlink[\faGithub][SimpleDB]{https://github.com/KuangjuX/SimpleDB}]
+  \end{itemize}
+  
 
 \section{Selected Awards}
 \begin{itemize}
@@ -84,6 +89,10 @@
 \end{itemize}
 
 \section{Experiences}
+\cventry{Part-Time Student Research}{03/2022 - 05/2022}
+\begin{itemize}
+  \item Participate in HuaWei hardware project, design \& implement a huffman compression algorithm using verilog based on zstd compression algorithm.
+\end{itemize}
 \cventry{Summer OSPP 2021}
 {07/2021 - 10/2021}
 \begin{itemize}
