fix typo & update resume

--- a/resume.tex
+++ b/resume.tex
@@ -91,7 +91,7 @@
 \section{Experiences}
 \cventry{Part-Time Student Research}{03/2022 - 05/2022}
 \begin{itemize}
-  \item Participate in HuaWei hardware project, design \& implement a huffman compression algorithm using verilog based on zstd compression algorithm.
+  \item Participate in HuaWei hardware project, design \& implement a huffman compression using verilog based on [\iconlink[\faGithub][zstd compression algorithm]{https://github.com/facebook/zstd}].
 \end{itemize}
 \cventry{Summer OSPP 2021}
 {07/2021 - 10/2021}
