--- a/resume.tex
+++ b/resume.tex
@@ -118,10 +118,9 @@
 \section{Skills}
 
 \begin{compactlist}
-  \item \textbf{Programming Languages}: Rust, C/C++, Go, Python, HTML/CSS/JavaScript. PHP
-  \item \textbf{Frameworks}: Vue3, Gin, Laravel
-  \item \textbf{Tools}: VSCode, gdb, GNU make, CMake, QEMU, Docker
-  \item \textbf{Tech Skills}: OS Kernel, Low level, Backend and Frontend
+  \item \textbf{Programming Languages}: Rust, C/C++, Go, Python, HTML/CSS/JavaScript, PHP
+  \item \textbf{Tools}: Visual Studio Code, gdb, GNU make, CMake, QEMU, Docker
+  \item \textbf{Tech Skills}: OS Kernel, Low level software development, Backend and Frontend
 \end{compactlist}
 
 \section{Others}
