--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 \begin{basicinfo}
   \info{\email{18630816527@163.com}}
   \info{\homepage{kuangjux.top}[https://kuangjux.top]}
-  \info{\github{KuangjuX (\textbf{173} followers)}[https://github.com/KuangjuX]}
+  \info{\github{KuangjuX (\textbf{185} followers)}[https://github.com/KuangjuX]}
   \info{\linkedinsquare{KuangjuX}[https://www.linkedin.com/in/kuangjux/]}
   % \phone{}
 \end{basicinfo}
@@ -30,7 +30,7 @@
 \cventry{xv6-rust}
   {03/2021 - 08/2021}
   [MIT xv6-riscv implemented by Rust]
-  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}84)]{https://github.com/Ko-oK-OS/xv6-rust}]
+  [\iconlink[\faGithub][Ko-oK/xv6-rust(\faIcon[regular]{star}111)]{https://github.com/Ko-oK-OS/xv6-rust}]
   \begin{itemize}
     \item A Unix-like operating system implemented pure rust. 
     \item Optimize memory module using Buddy Sytem.
@@ -46,10 +46,10 @@
     \item Design fat32 file system for rCore-Tutorial-v3, it is a alternative topic of rCore OS community in Summer OSPP 2021.
   \end{itemize}
 
-  \cventry{Trivial-TCP}
+  \cventry{TrivialTCPStack}
   {08/2021 - 09/2021}
   [A TCP/IP stack implemented in pure C]
-  [\iconlink[\faGithub][Trivial-TCP]{https://github.com/KuangjuX/Trivial-TCP}]
+  [\iconlink[\faGithub][TrivialTCPStack]{https://github.com/KuangjuX/TrivialTCPStack}]
   \begin{itemize}
     \item A TCP/IP stack which use UDP to simulate low level network environment. This project is the final project of Computer Netword Coursera.
     \item Implement three-way handshake, Go-Back-N, sliding window and so on.
@@ -68,11 +68,11 @@
 
   \cventry{Other Projects}{}
   \begin{itemize}
-    \item \textbf{xv6-riscv-solution}(\faIcon[regular]{star}21):
+    \item \textbf{xv6-riscv-solution}(\faIcon[regular]{star}26):
     {\small My solution and notes for MIT 6.S081 OS Course labs.} [\iconlink[\faGithub][xv6-riscv-solution]{https://github.com/KuangjuX/xv6-riscv-solution}]
     \item \textbf{NEMU-x86}(\faIcon[regular]{star}10):
     {\small NEMU is a simple but complete full-system emulator designed for teaching purpose. I finished it during Computer Organization and System Course.}  [\iconlink[\faGithub][NEMU-x86]{https://github.com/KuangjuX/NEMU-x86}]
-    \item \textbf{NSCSCC-2022-TJU/ChiselMIPS}:
+    \item \textbf{NSCSCC-2022-TJU/ChiselMIPS}(\faIcon[regular]{star}9):
     {\small ChiselMIPS is a five-stage CPU with instruction cache, data cache and TLB written in Chisel for NSCSCC 2022.} [\iconlink[\faGithub][NSCSCC-2022-TJU/ChiselMIPS]{https://github.com/NSCSCC-2022-TJU/ChiselMIPS}]
     \item \textbf{SimpleMIPS}(\faIcon[regular]{star}5):
     {\small SimpleMIPS is a classical five-stage pipelined CPU written in verilog that supports 57 MIPS instructions. } [\iconlink[\faGithub][SimpleMIPS]{https://github.com/KuangjuX/SimpleMIPS}]
